src/static/assets/scss/organisms/_form.scss
$form: '.form';

.form {
	$this: &;
	position: relative;

	&__copy {
		margin-bottom: 32px;
	}

	&__row {
		margin-left: -8px;
		margin-right: -8px;
	}

	&__field {
		margin-bottom: 40px;
		position: relative;
		width: 100%;

		&--radio {
			+ #{$this}__field--radio {
				margin-top: -24px;
			}
		}
	}

	&__valid-icon,
	&__error-icon {
		display: block;
		line-height: 1;
		opacity: 0;
		pointer-events: none;
		position: absolute;
		top: 20px;
		transition: opacity $transition-time;

		@include layer(bottom);
	}

	&__valid-icon {
		right: 20px;

		&,
		.brei-icon-check {
			font-size: 25px;
			height: 20px;
			width: 25px;
		}

		.brei-icon-check {
			color: $bilbao;
		}

		#{$this}__field--is-select & {
			right: 56px;
		}

		#{$form}__field--is-select#{$this}__field--has-tooltip & {
			right: 102px;
		}
	}

	&__error-icon {
		right: 24px;

		&,
		.brei-icon-warning {
			height: 20px;
			width: 4px;
		}

		.brei-icon-warning {
			color: $guardsman;
		}

		#{$this}__field--is-select & {
			right: 62px;
		}

		#{$form}__field--is-select#{$this}__field--has-tooltip & {
			right: 112px;
		}
	}

	&__help-message,
	&__error-message,
	&__text-count {
		display: block;
		font-family: $lora;
		font-size: 14px;
		font-style: italic;
		font-weight: 400;
		letter-spacing: 0;
		line-height: 1.7;
		margin: 0 25px;
	}

	&__help-message,
	&__error-message {
		position: relative;
	}

	&__error-message {
		color: $guardsman;
		display: none;
		position: absolute;
	}

	input[type='search'] {
		border: 0;
		padding: 15px 20px 14px; // Vertical whitespace adjustment
	}

	textarea {
		display: block;
		height: 104px;
		line-height: 24px;
		min-height: 104px;
	}
}

#{$form}__field--is-search {
	input[type='text'] {
		padding-right: 72px;
	}

	input[type='search'] {
		padding-right: 72px;
		text-overflow: ellipsis;

		~ label {
			height: 1.2em;
			overflow-y: hidden;
			// right: 72px;
			text-overflow: ellipsis;
		}
	}

	.search-button {
		background: $black;
		bottom: 3px;
		color: currentcolor;
		cursor: pointer;
		font-size: 24px;
		position: absolute;
		right: 3px;
		top: 3px;
		width: 62px;

		svg {
			color: $white;
			position: relative;
			top: 1px;
			transition: transform $transition-time ease;
		}

		&:hover,
		&:focus {
			background: $cwu-yellow;
			outline: 3px solid currentcolor;

			svg {
				color: currentcolor;
				transform: scale(1.1);
			}
		}

		@include layer(bottom);
	}

	&:focus,
	&:focus-within {
		input {
			outline: 4px solid currentcolor;
		}

		.search-button {
			outline: 3px solid currentcolor;
		}
	}

	&:hover {
		input {
			outline: 4px solid currentcolor;
		}

		.search-button {
			outline: 3px solid currentcolor;
		}
	}

	#{$form}__search-icon {
		height: 24px;
	}
}

#{$form}__field--disabled {
	color: $dove-gray;

	textarea,
	input {
		background-color: $mercury;
		border-color: $mercury;
		cursor: not-allowed;
		outline: 2px solid $mercury;
		pointer-events: none;
		resize: none;
		user-select: none;

		&:hover,
		&:focus {
			background-color: $mercury;
			border-color: $mercury;
			outline: 2px solid $mercury;
		}

		~ label {
			background-color: $mercury;
		}
	}

	.search-button {
		background-color: $mercury;
		color: $dove-gray;
		cursor: not-allowed;
		pointer-events: none;
		user-select: none;

		&:after {
			display: none;
		}
	}
}

#{$form}__field--is-valid {
	textarea,
	select,
	input[type='email'],
	input[type='phone'],
	input[type='tel'],
	input[type='number'],
	input[type='search'],
	input[type='text'] {
		padding-right: 53px;
	}

	#{$form}__text-count {
		display: block;
	}

	#{$form}__valid-icon {
		opacity: 1;
	}

	.search-button {
		background-color: $black;

		svg {
			color: $white;
		}
	}
}

#{$form}__field--is-invalid {
	color: $guardsman;

	textarea,
	select,
	input[type='email'],
	input[type='phone'],
	input[type='tel'],
	input[type='number'],
	input[type='search'],
	input[type='text'] {
		padding-right: 50px;
	}

	#{$form}__error-message {
		display: block;
	}

	#{$form}__help-message,
	#{$form}__text-count {
		visibility: hidden;
	}

	#{$form}__error-icon {
		opacity: 1;
	}
}

